gatekeeper/policies/forbidLoadBalancerServices.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sForbidLoadbalancer
metadata:
  name: forbid-loadbalancer-service
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    excludedNamespaces: ["utils"]
