gatekeeper/policies/uniqueLabelsDeployments.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueLabel
metadata:
  name: unique-labels-deployments
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment", "Pod"]
